--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,18 @@ dependencies:
   flutter:
     sdk: flutter
   
+  bloc: ^8.1.2
   intl: ^0.17.0
+  equatable: ^2.0.5
   flutter_svg: ^2.0.5
+  flutter_bloc: ^8.1.3
+  firebase_auth: ^4.7.2
   url_launcher: ^6.1.11
+  google_sign_in: ^6.1.4
   firebase_core: ^2.15.0
   adaptive_theme: ^3.2.1
   cupertino_icons: ^1.0.2
+  sign_in_with_apple: ^5.0.0
   flutter_native_splash: ^2.2.16
   flutter_launcher_icons: ^0.11.0
 
