--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,12 @@ dependencies:
   google_sign_in: ^6.1.4
   firebase_core: ^2.15.0
   adaptive_theme: ^3.2.1
+  cloud_firestore: ^4.8.4
   cupertino_icons: ^1.0.2
   sign_in_with_apple: ^5.0.0
+  flutter_card_swiper: ^6.0.0
   flutter_native_splash: ^2.2.16
+  contained_tab_bar_view: ^0.8.0
   flutter_launcher_icons: ^0.11.0
 
 dev_dependencies:
