--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   
   bloc: ^8.1.2
   intl: ^0.17.0
+  provider: ^6.0.5
   equatable: ^2.0.5
   flutter_svg: ^2.0.5
   flutter_bloc: ^8.1.3
@@ -27,8 +28,8 @@ dependencies:
   sign_in_with_apple: ^5.0.0
   flutter_card_swiper: ^6.0.0
   flutter_native_splash: ^2.2.16
-  contained_tab_bar_view: ^0.8.0
   flutter_launcher_icons: ^0.11.0
+  custom_sliding_segmented_control: ^1.7.5
 
 dev_dependencies:
   flutter_test:
