--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   firebase_auth: ^4.7.2
   url_launcher: ^6.1.11
+  flutter_picker: ^2.1.0
   google_sign_in: ^6.1.4
   firebase_core: ^2.15.0
   adaptive_theme: ^3.2.1
