--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,14 @@ dependencies:
     sdk: flutter
   
   bloc: ^8.1.2
+  hive: ^2.2.3
   intl: ^0.17.0
   provider: ^6.0.5
   equatable: ^2.0.5
   flutter_svg: ^2.0.5
+  hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.3
+  path_provider: ^2.1.1
   firebase_auth: ^4.7.2
   url_launcher: ^6.1.11
   flutter_picker: ^2.1.0
@@ -37,6 +40,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.3.3
 
 flutter_icons:
   android: 'launcher_icon'
