--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   provider: ^6.0.5
   equatable: ^2.0.5
   flutter_svg: ^2.0.5
+  image_picker: ^1.0.4
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.3
   path_provider: ^2.1.1
