--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.3 <3.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
   flutter_localizations:
@@ -14,27 +14,30 @@ dependencies:
   
   bloc: ^8.1.2
   hive: ^2.2.3
-  intl: ^0.17.0
+  intl: ^0.18.1
   provider: ^6.0.5
   equatable: ^2.0.5
-  flutter_svg: ^2.0.5
+  flutter_svg: ^2.0.7
   image_picker: ^1.0.4
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.3
   path_provider: ^2.1.1
-  firebase_auth: ^4.7.2
-  url_launcher: ^6.1.11
+  firebase_auth: ^4.10.1
+  url_launcher: ^6.1.14
   flutter_picker: ^2.1.0
-  google_sign_in: ^6.1.4
-  firebase_core: ^2.15.0
-  adaptive_theme: ^3.2.1
-  cloud_firestore: ^4.8.4
-  cupertino_icons: ^1.0.2
+  google_sign_in: ^6.1.5
+  firebase_core: ^2.17.0
+  adaptive_theme: ^3.4.1
+  cloud_firestore: ^4.9.3
+  cupertino_icons: ^1.0.6
   firebase_storage: ^11.2.8
+  shared_preferences: ^2.2.1
   sign_in_with_apple: ^5.0.0
+  firebase_messaging: ^14.6.9
   flutter_card_swiper: ^6.0.0
-  flutter_native_splash: ^2.2.16
-  flutter_launcher_icons: ^0.11.0
+  flutter_native_splash: ^2.3.3
+  flutter_launcher_icons: ^0.13.1
+  flutter_local_notifications: ^16.1.0
   custom_sliding_segmented_control: ^1.7.5
 
 dev_dependencies:
@@ -42,8 +45,8 @@ dev_dependencies:
     sdk: flutter
 
   hive_generator: ^2.0.1
-  flutter_lints: ^2.0.0
-  build_runner: ^2.3.3
+  flutter_lints: ^2.0.3
+  build_runner: ^2.4.6
 
 flutter_icons:
   android: 'launcher_icon'
