--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   bloc: ^8.1.2
   hive: ^2.2.3
   intl: ^0.18.1
+  crypto: ^3.0.3
   provider: ^6.0.5
   equatable: ^2.0.5
   flutter_svg: ^2.0.7
@@ -22,23 +23,26 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.3
   path_provider: ^2.1.1
-  firebase_auth: ^4.10.1
   url_launcher: ^6.1.14
   flutter_picker: ^2.1.0
   google_sign_in: ^6.1.5
-  firebase_core: ^2.17.0
   adaptive_theme: ^3.4.1
   cloud_firestore: ^4.9.3
   cupertino_icons: ^1.0.6
-  firebase_storage: ^11.2.8
   shared_preferences: ^2.2.1
   sign_in_with_apple: ^5.0.0
-  firebase_messaging: ^14.6.9
   flutter_card_swiper: ^6.0.0
   flutter_native_splash: ^2.3.3
   flutter_launcher_icons: ^0.13.1
   flutter_local_notifications: ^16.1.0
   custom_sliding_segmented_control: ^1.7.5
+
+  # Firebase Services
+  firebase_auth: ^4.10.1
+  firebase_core: ^2.17.0
+  firebase_storage: ^11.2.8
+  firebase_analytics: ^10.5.1
+  firebase_messaging: ^14.6.9
 
 dev_dependencies:
   flutter_test:
