--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,10 @@ dependencies:
   
   bloc: ^8.1.2
   hive: ^2.2.3
+  meta: ^1.9.1
   intl: ^0.18.1
   crypto: ^3.0.3
+  telegram: ^0.0.3
   provider: ^6.0.5
   equatable: ^2.0.5
   flutter_svg: ^2.0.7
