--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_picker: ^2.1.0
   google_sign_in: ^6.1.5
   cupertino_icons: ^1.0.6
+  easy_image_viewer: ^1.2.1
   flutter_app_badger: ^1.5.0
   shared_preferences: ^2.2.1
   sign_in_with_apple: ^5.0.0
