--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "dev.belikov.today"
+        applicationId "dev.belikov.todayApp"
         minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
