--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: today
-description: Dating app.
+description: Example app.
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
   flutter_localizations:
@@ -14,46 +14,46 @@ dependencies:
   
   bloc: ^8.1.2
   hive: ^2.2.3
-  meta: ^1.9.1
+  meta: ^1.10.0
   intl: ^0.18.1
   crypto: ^3.0.3
   telegram: ^0.0.3
-  provider: ^6.0.5
+  provider: ^6.1.1
   equatable: ^2.0.5
-  flutter_svg: ^2.0.7
-  image_picker: ^1.0.4
+  flutter_svg: ^2.0.9
+  image_picker: ^1.0.6
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.3
   path_provider: ^2.1.1
-  url_launcher: ^6.1.14
+  url_launcher: ^6.2.2
   flutter_picker: ^2.1.0
-  google_sign_in: ^6.1.5
+  google_sign_in: ^6.2.1
   cupertino_icons: ^1.0.6
-  easy_image_viewer: ^1.2.1
+  easy_image_viewer: ^1.3.2
   flutter_app_badger: ^1.5.0
-  shared_preferences: ^2.2.1
+  shared_preferences: ^2.2.2
   sign_in_with_apple: ^5.0.0
   flutter_card_swiper: ^6.0.0
-  flutter_native_splash: ^2.3.3
+  flutter_native_splash: ^2.3.9
   flutter_launcher_icons: ^0.13.1
-  flutter_local_notifications: ^16.1.0
-  custom_sliding_segmented_control: ^1.7.5
+  flutter_local_notifications: ^16.3.0
+  custom_sliding_segmented_control: ^1.8.1
 
   # Firebase Services
-  firebase_auth: ^4.10.1
-  firebase_core: ^2.17.0
-  cloud_firestore: ^4.11.0
-  firebase_storage: ^11.2.8
-  firebase_analytics: ^10.5.1
-  firebase_messaging: ^14.6.9
+  firebase_auth: ^4.15.3
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.13.6
+  firebase_storage: ^11.5.6
+  firebase_analytics: ^10.7.4
+  firebase_messaging: ^14.7.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   hive_generator: ^2.0.1
-  flutter_lints: ^2.0.3
-  build_runner: ^2.4.6
+  flutter_lints: ^3.0.1
+  build_runner: ^2.4.7
 
 flutter_icons:
   android: 'launcher_icon'
