--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: today
-description: Example app.
+description: Today app.
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -16,7 +16,9 @@ dependencies:
   hive: ^2.2.3
   meta: ^1.10.0
   intl: ^0.18.1
+  sizer: ^2.0.15
   crypto: ^3.0.3
+  shimmer: ^3.0.0
   telegram: ^0.0.3
   provider: ^6.1.1
   equatable: ^2.0.5
@@ -24,8 +26,8 @@ dependencies:
   image_picker: ^1.0.6
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.3
-  path_provider: ^2.1.1
   url_launcher: ^6.2.2
+  path_provider: ^2.1.1
   flutter_picker: ^2.1.0
   google_sign_in: ^6.2.1
   cupertino_icons: ^1.0.6
@@ -34,6 +36,7 @@ dependencies:
   shared_preferences: ^2.2.2
   sign_in_with_apple: ^5.0.0
   flutter_card_swiper: ^6.0.0
+  cached_network_image: ^3.3.1
   flutter_native_splash: ^2.3.9
   flutter_launcher_icons: ^0.13.1
   flutter_local_notifications: ^16.3.0
